# mujosign

./: .gitignore  README.md  conda-env.yml  nohup.out  pyproject.toml  requirements.txt  run.txt
configs/: solver.fastpath.yaml
docs/: ARCHITECTURE.md  ARTIFACTS.md  RUNBOOK.md  SPEC_GESTURE_JSON.md  SPEC_SCORING.md  methodology.md  mujosign_report.docx  mujosign_report.md
gestures/: Itialian_gesture.json  fist.json  ok_sign.json  ok_sign_2.json  open_hand.json  pinch.json  point_index.json  rock_sign.json  stop_palm.json  thumbs_up.json  v_sign.json
latest_run_logs/: progress.csv  train.out
latest_run_logs/SAC_1/: events.out.tfevents.1756395214.cip4d3.623403.0
latest_run_logs/SAC_2/: events.out.tfevents.1756395526.cip4d3.624323.0
latest_run_logs/SAC_3/: events.out.tfevents.1756395599.cip4d3.624569.0
latest_run_logs/traces/: index.txt  trace_20250828-173334_ep00000.npz  trace_20250828-173334_ep00001.npz  trace_20250828-173334_ep00002.npz  trace_20250828-173334_ep00003.npz  trace_20250828-173335_ep00004.npz  trace_20250828-173335_ep00005.npz  trace_20250828-173335_ep00006.npz  trace_20250828-173335_ep00007.npz  trace_20250828-173335_ep00008.npz  (+3741 more)
schemas/: gesture_spec.schema.json
scripts/: eval_latest_to_run.py  find_names.py  gesture_and_train.sh  gesture_to_train.py  inspect_names.py  launch_train.sh  launch_train_foreground.sh  loop_replay.py  render_pose.py  render_trace.py  run_single.py  sanity_check.py  trace_to_run.py  train_rl_sac.py  validate_specs.py  view_run.py  view_trace.py  view_trace_dmcontrol.py  view_traces_playlist.py
traces/: traces
(+22 files in other folders)
